# msig

./: .gitignore  CMakeLists.txt  README.md  example_deploy.json
include/: document_graph.hpp  msig.hpp  multisig.hpp
msig/: msig.abi
src/: CMakeLists.txt  accessors.cpp  document_graph.cpp  msig.cpp  multisig.cpp
